Bug 1713130 - Don't allow wrapping in the multiday timebar labels. r=darktrojan
Otherwise, for example when using 12 hour "en" locale, the "12:00 AM", "10:00 AM" and "10:00 PM" labels wrap in the non-rotated week view. In the rotated view, they would all wrap.

Differential Revision: https://phabricator.services.mozilla.com/D139108

--HG--
extra : amend_source : 9a493ab342b4ead8a8075a4b8f8f695ddc76deed

--- a/calendar/base/themes/common/calendar-views.css
+++ b/calendar/base/themes/common/calendar-views.css
@@ -308,6 +308,7 @@
   color: var(--viewTimeBoxColor);
   text-align: end;
   padding: 1px 5px;
+  white-space: nowrap;
 }
 
 .day-column-container {
